Fix dark mode

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,9 +2,7 @@
 
 body {
   font-size: 1.2rem;
-  color: #344854;
   position: relative;
-  background: #FFFFFF;
   display: flex;
   flex-flow: column;
   min-height: 100vh;
@@ -334,22 +332,16 @@ img {
   }
 }
 
-/* --- home page ---*/
-
-
-
 /* --- Footer --- */
 
 footer {
   padding: 30px 0;
-  background: #f5f5f7;
-  border-top: 1px #EAEAEA solid;
   margin-top: auto;
   font-size: 14px;
 }
 
 footer a {
-  color: #596073;
+  color: var(--bs-nav-link-color)
 }
 
 footer .list-inline {
@@ -398,19 +390,10 @@ footer .theme-by {
   border-bottom: 0;
 }
 
-.post-preview a {
-  text-decoration: none;
-  color: #404040;
-}
-
 .post-preview a:focus,
 .post-preview a:hover {
   text-decoration: none;
   color: #008AFF;
-}
-
-.post-title {
-  color: #344854
 }
 
 .post-title:focus,
@@ -892,20 +875,12 @@ ul.share li:hover .fab {
 
 .navbar {
   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.08);
-  background-color: rgba(255, 255, 255, .98);
+  background-color: var(--bs-body-bg);
   z-index: 9999;
 }
 
 .navbar-brand {
   font-size: 1.5rem;
-}
-
-.nav-link {
-  background-color: rgba(255, 255, 255, .98);
-}
-
-.bg-faded-light {
-  background-color: #FFFFFF;
 }
 
 .bg-black {
@@ -939,11 +914,9 @@ ul.share li:hover .fab {
 }
 
 .single-post-card {
-  background-color: white;
   text-align: left;
   box-shadow: 0 20px 20px rgba(0, 0, 0, .08);
   white-space: normal;
-  color: #4B4F56;
   border: 0px;
   margin: 0 2%;
   -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
@@ -953,13 +926,11 @@ ul.share li:hover .fab {
 }
 
 .single-post-card-haiku {
-  background-color: white;
   text-align: left;
   min-height: 400px;
   margin: 3%;
   box-shadow: 0 20px 20px rgba(0, 0, 0, .08);
   white-space: normal;
-  color: #4B4F56;
   /* border: 0px ; */
   border-color: #D9D9D9;
   -webkit-transition: all 250ms cubic-bezier(.02, .01, .47, 1);
@@ -1089,22 +1060,7 @@ ul.share li:hover .fab {
 
 /* --- Dark mode --- */
 
-:root[data-theme="dark"] {
-  background-color: #171717 !important;
-  filter: invert(100%) hue-rotate(180deg) brightness(105%) contrast(85%);
-  -webkit-filter: invert(100%) hue-rotate(180deg) brightness(105%) contrast(85%);
-}
-:root[data-theme="dark"] body {
-  background-color: #FFF !important;
-}
-:root[data-theme="dark"] img,
-:root[data-theme="dark"] video,
-:root[data-theme="dark"] iframe,
-:root[data-theme="dark"] body [style*="background-image"] {
-  filter: hue-rotate(180deg) contrast(100%) invert(100%);
-  -webkit-filter: hue-rotate(180deg) contrast(100%) invert(100%);
-}
-:root[data-theme="dark"] #dark-mode-toggle::before {
+:root[data-bs-theme="dark"] #dark-mode-toggle::before {
   /* Convert to .bi-sun */
   content: "\f5a2";
 }
